...
        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
    </dependencies>
    <scenes>
        <!--Neurolog-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="NLMainVC" customModule="Neurolog" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ma3-dl-PPw">
                                <rect key="frame" x="115" y="15" width="145" height="29"/>
                                <segments>
                                    <segment title="All"/>
                                    <segment title="Summary"/>
                                </segments>
                                <color key="tintColor" red="0.0" green="0.33725490196078434" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
                                <connections>
                                    <action selector="segmentedValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="1E4-Cc-Phe"/>
                                </connections>
                            </segmentedControl>
...
                                    <rect key="frame" x="0.0" y="5" width="375" height="0.0"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </view>
                                <sections/>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Topic:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJT-9t-GaP">
                                <rect key="frame" x="25" y="141" width="340" height="18"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jvl-Hb-dCk">
...
                            <mask key="constraints">
                                <exclude reference="EOS-Ju-zGD"/>
                                <exclude reference="GTw-Rz-QjS"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Record" id="wj4-Dr-now">
                        <rightBarButtonItems>
                            <barButtonItem style="plain" systemItem="add" id="Jn0-75-dog">
                                <connections>
                                    <action selector="didTapSave:" destination="hxT-Hq-w5N" id="gYf-q1-fNf"/>
                                    <segue destination="blI-DO-O8H" kind="popoverPresentation" identifier="NLAddVisitSegue" popoverAnchorBarButtonItem="Jn0-75-dog" id="ISH-WM-DFP">
                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
...
                    <view key="view" contentMode="scaleToFill" id="qva-6l-Kbk">
                        <rect key="frame" x="0.0" y="64" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Add case" id="pGi-H6-hO2">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="HnM-98-ccN">
                            <connections>
                                <action selector="didTapCancel" destination="blI-DO-O8H" id="ROE-8R-Kof"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="xkP-Qg-Kew">
                            <connections>
                                <action selector="didTapSave:" destination="blI-DO-O8H" id="aoi-Ol-7gb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="L9e-dt-njc">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add record" id="grj-A1-SKO">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="4of-Dc-I6D">
                            <connections>
                                <action selector="didTapDismiss:" destination="hxT-Hq-w5N" id="PLI-tL-85r"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="ohd-K4-dxU">
...
