...
                    $0.value = date
                } else {
                    $0.value = NSDate();
                }                
            }
            <<< NameRow("location") {
                $0.title =  "Location:"
                if let location = editingRecord?.location {
                    $0.value = location
                }
            }
            <<< AlertRow<String>("setting") {
                $0.title = "Setting:"
...
